--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/86.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/86.md
@@ -2,4 +2,9 @@
 title = "86"
 
 +++
-तामिति॥ निमित्तज्ञः शकुनज्ञस्तपोनिधिर्वसिष्ठः। पुण्यं दर्शनं यस्यास्तां तां धेनुं दृष्ट्वा आशंसितं मनोरथः। नपुंसके भावे क्तः। तत्रावन्ध्यं सफलं प्रार्थनं यस्य स तमाशंसितावन्ध्यप्रार्थनम्। अवन्ध्यमनोरथमित्यर्थः। याजयितुं योग्यं याज्यं पार्थिवं पुनरब्रवीत् ॥ 86 ॥
+तामिति॥  
+**निमित्तज्ञः** शकुनज्ञस्तपोनिधिर्वसिष्ठः।  
+**पुण्यं** दर्शनं यस्यास्तां तां धेनुं **दृष्ट्वा**  
+**आशंसितं** मनोरथः। नपुंसके भावे क्तः।  
+**तत्रावन्ध्यं** सफलं **प्रार्थनं** यस्य स **तमाशंसितावन्ध्यप्रार्थनम्**। अवन्ध्यमनोरथमित्यर्थः।  
+याजयितुं योग्यं **याज्यं** पार्थिवं पुनरब्रवीत् ॥ 86 ॥
