--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
@@ -982,8 +982,11 @@ unicode_script = "devanagari"
 ### मुन्युत्तरम्
 +++(र५, क५)+++
 
-इति विज्ञापितो राज्ञा ध्यानस्तिमितलोचनः ।  
-क्षणमात्रम् ऋषिस्तस्थौ सुप्तमीन इव ह्रदः ॥ ७३ ॥    
+इति विज्ञापितो राज्ञा  
+ध्यान-स्तिमित-लोचनः ।  
+क्षण-मात्रम् **ऋषिस् तस्थौ**  
+सुप्त-मीन इव ह्रदः ॥ ७३ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/73.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -992,8 +995,11 @@ unicode_script = "devanagari"
 </div>
 
 
-सोऽपश्यत्प्रणिधानेन सन्ततेः स्तम्भकारणम् ।  
-भावितात्मा भुवो भर्तुरथैनम् प्रत्यबोधयत् ॥ ७४ ॥    
+**सोऽपश्यत्** प्रणिधानेन  
+सन्ततेः स्तम्भ-कारणम् ।  
+भावितात्मा भुवो भर्तुर्  
+अथैनम् **प्रत्यबोधयत्** ॥ ७४ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/74.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1003,8 +1009,11 @@ unicode_script = "devanagari"
 </div>
 
 
-पुरा शक्रमुपस्थाय तवोर्वीम् प्रति यास्यतः ।  
-आसीत्कल्पतरुच्छायामाश्रिता सुरभिः पथि ॥ ७५ ॥    
+पुरा शक्रम् उपस्थाय  
+तवोर्वीम् प्रति यास्यतः ।  
+**आसीत्** कल्पतरुच्छायाम्  
+आश्रिता **सुरभिः पथि** ॥ ७५ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/75.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1013,8 +1022,11 @@ unicode_script = "devanagari"
 </div>
 
 
-धर्मलोपभयाद्राज्ञीम् ऋतुस्नाताम् इमां स्मरन् ।  
-प्रदक्षिणक्रियार्हायान् तस्यान् त्वं साधु नाचरः ॥ ७६ ॥    
+धर्म-लोप-भयाद् **राज्ञीम्**  
+ऋतु-स्नाताम् इमां **स्मरन्** ।  
+प्रदक्षिण-क्रियार्हायान्  
+तस्यान् **त्वं साधु नाचरः** ॥ ७६ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/76.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1023,8 +1035,11 @@ unicode_script = "devanagari"
 </div>
 
 
-अवजानासि माय्ँ यस्मादतस्ते न भविष्यति ।  
-मत्प्रसूतिमनाराध्य प्रजेति त्वां शशाप सा ॥ ७७ ॥    
+अवजानासि माय्ँ यस्माद्  
+अतस् ते न भविष्यति ।  
+मत्-प्रसूतिम् अनाराध्य  
+प्रजेति **त्वां शशाप** सा ॥ ७७ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/77.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1033,8 +1048,11 @@ unicode_script = "devanagari"
 </div>
 
 
-स शापो न त्वया राजन्न च सारथिना श्रुतः ।  
-नदत्याकाशगङ्गायाः स्रोतस्युद्दामदिग्गजे ॥ ७८ ॥    
+स शापो न त्वया राजन्  
+**न** च सारथिना **श्रुतः** ।  
+नदत्य् आकाश-गङ्गायाः  
+स्रोतस्य् उद्दाम-दिग्गजे ॥ ७८ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/78.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1043,8 +1061,11 @@ unicode_script = "devanagari"
 </div>
 
 
-ईप्सितन् तदवज्ञानाद्विद्धि सार्गलमात्मनः ।  
-प्रतिबध्नाति हि श्रेयः पूज्यपूजाव्यतिक्रमः ॥ ७९ ॥    
+**ईप्सितन्** तद् अवज्ञानाद्  
+**विद्धि सार्गलम्** आत्मनः ।  
+**प्रतिबध्नाति हि श्रेयः**  
+पूज्य-पूजा-व्यतिक्रमः ॥ ७९ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/79.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1053,8 +1074,11 @@ unicode_script = "devanagari"
 </div>
 
 
-हविषे दीर्घसत्रस्य सा चेदानीम् प्रचेतसः ।  
-भुजङ्गपिहितद्वारम् पातालमधितिष्ठति ॥ ८० ॥    
+हविषे दीर्घ-सत्रस्य  
+**सा** चेदानीम् प्रचेतसः ।  
+भुजङ्ग-पिहित-द्वारम्  
+**पातालम् अधितिष्ठति** ॥ ८० ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/80.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1063,8 +1087,11 @@ unicode_script = "devanagari"
 </div>
 
 
-सुतान् तदीयां सुरभेः कृत्वा प्रतिनिधिं शुचिः ।  
-आराधय सपत्नीकः प्रीता कामदुघा हि सा ॥ ८१ ॥    
+सुतान् तदीयां सुरभेः  
+**कृत्वा प्रतिनिधिं** शुचिः ।  
+**आराधय** स-पत्नीकः  
+प्रीता कामदुघा हि सा ॥ ८१ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/81.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1076,8 +1103,11 @@ unicode_script = "devanagari"
 ## नन्दिनी-दर्शनम्
 +++(र५)+++
 
-इति वादिन एवास्य होतुराहुतिसाधनम् ।  
-अनिन्द्या नन्दिनी नाम धेनुराववृते वनात् ॥ ८२ ॥    
+इति वादिन एवास्य  
+होतुर् आहुति-साधनम् ।  
+अनिन्द्या नन्दिनी नाम  
+**धेनुर् आववृते** वनात् ॥ ८२ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/82.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1086,8 +1116,11 @@ unicode_script = "devanagari"
 </div>
 
 
-ललाटोदयमाभुग्नम् पल्लवस्निग्धपाटला ।  
-बिभ्रती श्वेतरोमाङ्कं सन्ध्येव शशिनन् नवम् ॥ ८३ ॥    
+**ललाटोदयम्** आभुग्नम्  
+पल्लव-स्निग्ध-पाटला ।  
+**बिभ्रती श्वेतरोमाङ्कं**  
+सन्ध्येव शशिनन् नवम् ॥ ८३ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/83.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1096,8 +1129,11 @@ unicode_script = "devanagari"
 </div>
 
 
-भुवङ् कोष्णेन कुण्डोध्नी मेध्येनावभृथादपि ।  
-प्रस्रवेणाभिवर्षन्ती वत्सालोकप्रवर्तिना ॥ ८४ ॥    
+भुवङ् कोष्णेन कुण्डोध्नी  
+मेध्येनावभृथाद् अपि ।  
+**प्रस्रवेणाभिवर्षन्ती**  
+वत्सालोक-प्रवर्तिना ॥ ८४ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/84.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1106,8 +1142,11 @@ unicode_script = "devanagari"
 </div>
 
 
-रजःकणैः खुरोद्धूतैः स्पृशद्भिर्गात्रमन्तिकात् ।  
-तीर्थाभिषेकजां शुद्धिम् आदधाना महीक्षितः ॥ ८५ ॥    
+रजःकणैः खुरोद्धूतैः  
+स्पृशद्भिर् गात्रम् अन्तिकात् ।  
+तीर्थाभिषेकजां **शुद्धिम्**  
+**आदधाना** महीक्षितः ॥ ८५ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/85.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1116,8 +1155,11 @@ unicode_script = "devanagari"
 </div>
 
 
-ताम् पुण्यदर्शनान् दृष्ट्वा निमित्तज्ञस्तपोनिधिः ।  
-याज्यमाशंसितावन्ध्यप्रार्थनम् पुनरब्रवीत् ॥ ८६ ॥    
+**ताम्** पुण्य-दर्शनान् **दृष्ट्वा**  
+निमित्तज्ञस् तपोनिधिः ।  
+याज्यम् +++(पार्थिवं)+++ आशंसितावन्ध्य-  
+प्रार्थनम् पुनर् **अब्रवीत्** ॥ ८६ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/86.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1126,8 +1168,11 @@ unicode_script = "devanagari"
 </div>
 
 
-अदूरवर्तिनीं सिद्धिं राजन् विगणयात्मनः ।  
-उपस्थितेयङ् कल्याणी नाम्नि कीर्तित एव यत् ॥ ८७ ॥    
+अदूर-वर्तिनीं **सिद्धिं**  
+राजन् **विगणयात्मनः** ।  
+उपस्थितेयङ् कल्याणी  
+नाम्नि कीर्तित एव यत् ॥ ८७ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/87.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1140,6 +1185,7 @@ unicode_script = "devanagari"
 
 वन्यवृत्तिरिमां शश्वद् आत्मानुगमनेन गाम् ।  
 विद्यामभ्यसनेनेव प्रसादयितुमर्हसि ॥ ८८ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/88.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
