--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
@@ -1183,8 +1183,10 @@ unicode_script = "devanagari"
 
 ## व्रतग्रहणम्
 
-वन्यवृत्तिरिमां शश्वद् आत्मानुगमनेन गाम् ।  
-विद्यामभ्यसनेनेव प्रसादयितुमर्हसि ॥ ८८ ॥    
+वन्य-वृत्तिर् इमां शश्वद्  
+आत्मानुगमनेन **गाम्** ।  
+विद्याम् अभ्यसनेनेव  
+**प्रसादयितुमर्हसि** ॥ ८८ ॥    
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/88.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -1194,8 +1196,12 @@ unicode_script = "devanagari"
 </div>
 
 
-प्रस्थितायाम् प्रतिष्ठेथाः स्थितायां स्थितिमाचरेः ।  
-निषण्णायान् निषीदास्याम् पीताम्भसि पिबेरपः ॥ ८९ ॥    
++++(कालिदासोक्तम् इदं व्रतं शास्त्रान्तरे दृश्यते??)+++  
+प्रस्थितायाम् **प्रतिष्ठेथाः**  
+स्थितायां **स्थितिम् आचरेः** ।  
+निषण्णायान् **निषीदास्याम्**  
+पीताम्भसि **पिबेर् अपः** ॥ ८९ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/89.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1204,18 +1210,11 @@ unicode_script = "devanagari"
 </div>
 
 
-वधूर्भक्तिमती चैनामर्चिताम् आ तपोवनात् ।  
-प्रयता प्रातरन्वेतु सायम् प्रत्युद्व्रजेदपि ॥ ९१ ॥    
-<div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/91.md">
-<details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
+वधूर् भक्ति-मती **चैनाम्**  
+अर्चिताम् आ तपोवनात् ।  
+प्रयता **प्रातर् अन्वेतु**  
+**सायम् प्रत्युद्व्रजेद्** अपि ॥ ९० ॥    
 
-इतीति॥ इत्यनेन प्रकारेण त्वमा प्रसादात् प्रसादपर्यन्तम्। 'आङ् मर्यादाभिविध्योः' (पा.2।1।13) इत्यस्य वैभाषिकत्वादसमासत्वम्। अस्या धेनोः परिचर्यापरः शुश्रूषापरो भवः; ते तवाविघ्नं विघ्नस्याभावोऽस्तु। 'अव्ययं विभक्ति-'(पा.2।1।6)इत्यादिनार्थाभावेऽव्ययीभावः। पितेव पुत्रीणां सत्पुत्रवताम्। प्रशंसायामिनिप्रत्ययः। धुर्यग्रे स्थेयास्तिष्ठेः। आशीरर्थे लिङ्। 'एर्लिङि'(पा.6।4।67) इत्याकारस्यैकारादेशः। त्वत्सदृशो भवत्पुत्रोऽस्त्विति भावः॥ 91 ॥
-</details>
-</div>
-
-
-इत्याप्रसादादस्यास्त्वम् परिचर्यापरो भव ।  
-अविघ्नम् अस्तु ते स्थेयाः पितेव धुरि +++(सत्-)+++पुत्रिणाम् ॥ ९० ॥    
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/90.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1224,8 +1223,24 @@ unicode_script = "devanagari"
 </div>
 
 
-तथेति प्रतिजग्राह प्रीतिमान् सपरिग्रहः ।  
-आदेशन् देशकालज्ञः शिष्यः शासितुरानतः ॥ ९२ ॥    
+इत्य् आप्रसादाद् अस्यास् त्वम्  
+**परिचर्यापरो भव** ।  
+**अविघ्नम् अस्तु** ते, +++(प्राप्य सत्-पुत्रान्)+++ **स्थेयाः**  
+पितेव **धुरि**+++(→अग्रे)+++ +++(सत्-)+++पुत्रिणाम्+++(← प्रशंसायामिनिप्रत्ययः)+++ ॥ ९१ ॥    
+
+<div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/91.md">
+<details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
+
+इतीति॥ इत्यनेन प्रकारेण त्वमा प्रसादात् प्रसादपर्यन्तम्। 'आङ् मर्यादाभिविध्योः' (पा.2।1।13) इत्यस्य वैभाषिकत्वादसमासत्वम्। अस्या धेनोः परिचर्यापरः शुश्रूषापरो भवः; ते तवाविघ्नं विघ्नस्याभावोऽस्तु। 'अव्ययं विभक्ति-'(पा.2।1।6)इत्यादिनार्थाभावेऽव्ययीभावः। पितेव पुत्रिणां सत्पुत्रवताम्। प्रशंसायामिनिप्रत्ययः। धुर्यग्रे स्थेयास्तिष्ठेः। आशीरर्थे लिङ्। 'एर्लिङि'(पा.6।4।67) इत्याकारस्यैकारादेशः। त्वत्सदृशो भवत्पुत्रोऽस्त्विति भावः॥ 91 ॥
+</details>
+</div>
+
+
+तथेति **प्रतिजग्राह**  
+प्रीतिमान् सपरिग्रहः ।  
+**आदेशन्** देशकालज्ञः  
+शिष्यः शासितुर् आनतः ॥ ९२ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/92.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1234,8 +1249,11 @@ unicode_script = "devanagari"
 </div>
 
 
-अथ प्रदोषे दोषज्ञः सव्ँवेशाय विशाम् पतिम् ।  
-सूनुः सूनृतवाक्स्रष्टुर् विससर्जोर्जितश्रियम् ॥ ९३ ॥    
+अथ प्रदोषे दोषज्ञः +++(वसिष्ठः)+++  
+**सव्ँवेशाय** विशाम् पतिम् ।  
+सूनुः सूनृत+++(=सत्य-प्रिय)+++-वाक्-स्रष्टुर्  
+**विससर्जोर्जित-श्रियम्** ॥ ९३ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/93.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1244,8 +1262,11 @@ unicode_script = "devanagari"
 </div>
 
 
-सत्याम् अपि तपःसिद्धौ नियमापेक्षया मुनिः ।  
-कल्पवित् कल्पयामास वन्याम् एवास्य सव्ँविधाम् ॥ ९४ ॥    
+सत्याम् अपि तपःसिद्धौ  
+नियमापेक्षया **मुनिः** ।  
+कल्प-वित् **कल्पयाम् आस**  
+वन्याम् एवास्य **सव्ँविधाम्** ॥ ९४ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/94.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -1255,8 +1276,11 @@ unicode_script = "devanagari"
 
 
 +++(प्रहर्षिणी वृत्तम्)+++  
-निर्दिष्टाङ् कुलपतिना स पर्णशालाम् अध्यास्य प्रयतपरिग्रहद्वितीयः ।  
-तच्छिष्याध्ययननिवेदितावसानां सव्ँविष्टः कुशशयने निशान् निनाय ॥ ९५ ॥    
+निर्दिष्टाङ् कुलपतिना स **पर्ण-शालाम्**  
+**अध्यास्य** प्रयत-परिग्रह-द्वितीयः ।  
+तच्-छिष्याध्ययन-निवेदितावसानां  
+सव्ँविष्टः कुश-शयने **निशान् निनाय** ॥ ९५ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/95.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
