--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
@@ -135,8 +135,11 @@ unicode_script = "devanagari"
 </div>
 
 
-मरुत्प्रयुक्ताश्च मरुत्सखाभन् तमर्च्यमारादभिवर्तमानम् ।  
-अवाकिरन्बाललताः प्रसूनैराचारलाजैरिव पौरकन्याः ॥ १० ॥  
+मरुत्-प्रयुक्ताश् च मरुत्-सखा+++(=अग्नि)+++ऽऽभन्  
+तम् अर्च्यम् आराद् अभिवर्तमानम् ।  
+**अवाकिरन् बाल-लताः** प्रसूनैर्  
+आचार-लाजैर् इव पौर-कन्याः ॥ १० ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/10.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -146,8 +149,11 @@ unicode_script = "devanagari"
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga02-11-20.mp3"></div>
 
 
-धनुर्भृतोऽप्यस्य दयार्द्रभावमाख्यातमन्तःकरणैर्विशङ्कैः ।  
-विलोकयन्त्यो वपुरापुरक्ष्णाम् प्रकामविस्तारफलं हरिण्यः ॥ ११ ॥  
+धनुर्-भृतो ऽप्य् अस्य दयार्द्र-भावम्  
+आख्यातम् अन्तः-करणैर् विशङ्कैः ।  
+विलोकयन्त्यो +++(राज-)+++वपुर् **आपुर् अक्ष्णाम्**  
+**प्रकाम-विस्तार-फलं हरिण्यः** ॥ ११ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/11.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -158,6 +164,7 @@ unicode_script = "devanagari"
 
 स कीचकैर्मारुतपूर्णरन्ध्रैः कूजद्भिरापादितवंशकृत्यम् ।  
 शुश्राव कुञ्जेषु यशस्स्वमुच्चैरुद्गीयमानव्ँ वनदेवताभिः ॥ १२ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/12.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
