--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
@@ -698,11 +698,10 @@ unicode_script = "devanagari"
 
 
 आतपाऽऽत्यय+++(=अपगम)+++सङ्क्षिप्त-  
-नीवारासु+++(=तृणधान्य)+++ निषादिभिः ।  
+नीवारासु+++(=तृणधान्यवत्सु [भूमिषु])+++ निषादिभिः ।  
 **मृगैर् वर्तित-रोमन्थम्**  
 उटजाङ्गन-भूमिषु ॥ ५२ ॥    
-
-+++(आतपात्यये किमर्थं सङ्क्षिप्तास् (राशीकृतास्) स्युर् नीवाराः??)+++
++++(भोज्यतण्डुलानाम् अवाप्त्यै कृषीवलैः क्षेत्रात् समाहृत-धान्यानां मुसलादि-पातैस् त्वग्-अपनयनार्थं यावच्-छोषं तपति दिवाकरे दिवा धान्यानि शोष्यन्ते। तत आतपस्यापगमे सायंतने तानि संक्षिप्य गोणीषु पुनः पूर्यन्ते। आतप एव यथापेक्षं धान्यशोषणस्य प्रयोजनात्तदपगमे सुरक्षादिहेतोस् तत्सङ्क्षेपः स्वाभाविक एव।)+++
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/52.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
