--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
@@ -162,8 +162,10 @@ unicode_script = "devanagari"
 </div>
 
 
-स कीचकैर्मारुतपूर्णरन्ध्रैः कूजद्भिरापादितवंशकृत्यम् ।  
-शुश्राव कुञ्जेषु यशस्स्वमुच्चैरुद्गीयमानव्ँ वनदेवताभिः ॥ १२ ॥  
+स कीचकैर् मारुत-पूर्ण-रन्ध्रैः  
+कूजद्भिर् आपादित-वंश-कृत्यम् ।  
+**शुश्राव** कुञ्जेषु **यशस्** स्वम् उच्चैर्  
+उद्गीयमानव्ँ वनदेवताभिः ॥ १२ ॥ +++(5 वंशे श्लेषः)+++  
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/12.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -174,8 +176,11 @@ unicode_script = "devanagari"
 </div>
 
 
-पृक्तस्तुषारैर्गिरिनिर्झराणामनोकहाकम्पितपुष्पगन्धी ।  
-तमातपक्लान्तमनातपत्रमाचारपूतम् पवनस्सिषेवे ॥ १३ ॥  
+पृक्तस् तुषारैर् गिरि-निर्झराणाम्  
+अन्-ओक-हा+++(=वृक्ष)+++--कम्पित-पुष्पगन्धी ।  
+तम् आतप-क्लान्तम् अनातपत्रम्  
+आचार-पूतम् **पवनस् सिषेवे** ॥ १३ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/13.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -184,8 +189,11 @@ unicode_script = "devanagari"
 </div>
 
 
-शशाम वृष्ट्यापि विना दवाग्निरासीद्विशेषा फलपुष्पवृद्धिः ।  
-ऊनन् न सत्त्वेष्वधिको बबाधे तस्मिन्वनङ् गोप्तरि गाहमाने ॥ १४ ॥  
+**शशाम** वृष्ट्यापि विना **दवाग्निर्**+++(5)+++  
+**आसीद्** विशेषा **फल-पुष्प-वृद्धिः** ।  
+**ऊनन् न** सत्त्वेष्व् **अधिको बबाधे**  
+तस्मिन् वनङ् गोप्तरि गाहमाने ॥ १४ ॥+++(5)+++  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/14.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -194,8 +202,11 @@ unicode_script = "devanagari"
 </div>
 
 
-सञ्चारपूतानि दिगन्तराणि कृत्वा दिनान्ते निलयाय गन्तुम् ।  
-प्रचक्रमे पल्लवरागताम्रा प्रभा पतङ्गस्य मुनेश्च धेनुः ॥ १५ ॥  
+**सञ्चार-पूतानि** दिग्-अन्तराणि  
+**कृत्वा** दिनान्ते **निलयाय गन्तुम्** ।  
+**प्रचक्रमे** पल्लव-राग-ताम्रा  
+प्रभा पतङ्गस्य मुनेश् च धेनुः ॥ १५ ॥+++(5)+++  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/15.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -204,8 +215,11 @@ unicode_script = "devanagari"
 </div>
 
 
-तान् देवतापित्रतिथिक्रियार्थाम् अन्वग्ययौ मध्यमलोकपालः ।  
-बभौ च सा तेन सताम् मतेन श्रद्धेव साक्षाद्विधिनोपपन्ना ॥ १६ ॥  
+तान् देवता-पित्र्-अतिथि-क्रियार्थाम्  
+**अन्वग् ययौ** मध्यम-लोकपालः ।  
+**बभौ** च **सा** तेन सताम् मतेन  
+श्रद्धेव साक्षाद् विधिनोपपन्ना ॥ १६ ॥+++(5)+++  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/16.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -214,8 +228,11 @@ unicode_script = "devanagari"
 </div>
 
 
-स पल्वलोत्तीर्णवराहयूथान्यावासवृक्षोन्मुखबर्हिणानि ।  
-ययौ मृगाध्यासितशाद्वलानि श्यामायमानानि वनानि पश्यन् ॥ १७ ॥  
+स पल्वलोत्तीर्ण-वराह-यूथान्य्  
+आवास-वृक्षोन्मुख-बर्हिणानि ।  
+**ययौ** मृगाध्यासित-शाद्वलानि  
+श्यामायमानानि वनानि **पश्यन्** ॥ १७ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/17.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -224,8 +241,11 @@ unicode_script = "devanagari"
 </div>
 
 
-आपीनभारोद्वहनप्रयत्नाद्गृष्टिर्गुरुत्वाद्वपुषो नरेन्द्रः ।  
-उभावलञ्चक्रतुरञ्चिताभ्यान् तपोवनावृत्तिपथङ् गताभ्याम् ॥ १८ ॥  
+आपीनभारोद्वहन-प्रयत्नाद्  
+गृष्टिर्+++(=सकृत्प्रसूता गौः)+++, गुरुत्वाद् वपुषो नरेन्द्रः ।  
+उभाव् **अलञ्चक्रतुर् अञ्चिताभ्यान्**  
+तपोवनावृत्ति-पथङ् गताभ्याम् ॥ १८ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/18.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -234,8 +254,11 @@ unicode_script = "devanagari"
 </div>
 
 
-वसिष्ठधेनोरनुयायिनन् तमावर्तमानव्ँ वनिता वनान्तात् ।  
-पपौ निमेषालसपक्ष्मपङ्क्तिरुपोषिताभ्यामिव लोचनाभ्याम् ॥ १९ ॥  
+वसिष्ठ-धेनोर् अनुयायिनन् **तम्**  
+आवर्तमानव्ँ वनिता वनान्तात् ।  
+**पपौ** निमेषालस-पक्ष्म-पङ्क्तिर्  
+उपोषिताभ्याम् इव **लोचनाभ्याम्** ॥ १९ ॥ +++(5)+++ 
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/19.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -244,8 +267,11 @@ unicode_script = "devanagari"
 </div>
 
 
-पुरस्कृता वर्त्मनि पार्थिवेन प्रत्युद्गता पार्थिवधर्मपत्न्या ।  
-तदन्तरे सा विरराज धेनुर्दिनक्षपामध्यगतेव सन्ध्या ॥ २० ॥  
+पुरस्-कृता वर्त्मनि पार्थिवेन,  
+प्रत्युद्गता पार्थिव-धर्म-पत्न्या ।  
+तद्-अन्तरे सा **विरराज धेनुर्**  
+दिन-क्षपा-मध्य-गतेव सन्ध्या ॥ २० ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/20.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -254,8 +280,11 @@ unicode_script = "devanagari"
 </div>
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga02-21-33.mp3"></div>
 
-प्रदक्षिणीकृत्य पयस्विनीन् तां सुदक्षिणा साक्षतपात्रहस्ता ।  
-प्रणम्य चानर्च विशालमस्याः शृङ्गान्तरन् द्वारमिवार्थसिद्धेः ॥ २१ ॥  
+प्रदक्षिणी-कृत्य पयस्विनीन् तां  
+सुदक्षिणा साक्षत-पात्र-हस्ता ।  
+**प्रणम्य चानर्च** विशालम्  
+अस्याः **शृङ्गान्तरन्** द्वारम् इवार्थ-सिद्धेः ॥ २१ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/21.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
