--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
@@ -293,8 +293,11 @@ unicode_script = "devanagari"
 </div>
 
 
-वत्सोत्सुकापि स्तिमिता सपर्याम् प्रत्यग्रहीत्सेति ननन्दतुस्तौ ।  
-भक्त्योपपन्नेषु हि तद्विधानाम् प्रसादचिह्नानि पुरःफलानि ॥ २२ ॥  
+वत्सोत्सुकापि स्तिमिता सपर्याम्  
+**प्रत्यग्रहीत् सेति ननन्दतुस्** तौ ।  
+भक्त्योपपन्नेषु हि तद्-विधानाम्  
+प्रसाद-चिह्नानि पुरः-फलानि ॥ २२ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/22.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -303,8 +306,11 @@ unicode_script = "devanagari"
 </div>
 
 
-गुरोः सदारस्य निपीड्य पादौ समाप्य सान्ध्यञ्च विधिन् दिलीपः ।  
-दोहावसाने पुनरेव दोग्ध्रीम् भेजे भुजोच्छिन्नरिपुर्निषण्णाम् ॥ २३ ॥  
+गुरोः सदारस्य निपीड्य पादौ  
+समाप्य सान्ध्यञ्च विधिन् दिलीपः ।  
+दोहावसाने पुनर् एव **दोग्ध्रीम्**  
+**भेजे** भुजोच्छिन्न-रिपुर् निषण्णाम् ॥ २३ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/23.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -313,8 +319,11 @@ unicode_script = "devanagari"
 </div>
 
 
-तामन्तिकन्यस्तबलिप्रदीपामन्वास्य गोप्ता गृहिणीसहायः ।  
-क्रमेण सुप्तामनुसव्ँविवेश सुप्तोत्थिताम् प्रातरनूदतिष्ठत् ॥ २४ ॥  
+ताम् अन्तिक-न्यस्त-बलि-प्रदीपाम्  
+**अन्वास्य** गोप्ता गृहिणीसहायः ।  
+क्रमेण सुप्ताम् **अनुसव्ँविवेश**  
+सुप्तोत्थिताम् प्रातर् **अनूदतिष्ठत्** ॥ २४ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/24.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -323,8 +332,11 @@ unicode_script = "devanagari"
 </div>
 
 
-इत्थव्ँ व्रतन् धारयतः प्रजार्थं समम् महिष्या महनीयकीर्तेः ।  
-सप्त व्यतीयुस्त्रिगुणानि तस्य दिनानि दीनोद्धरणोचितस्य ॥ २५ ॥  
+इत्थव्ँ व्रतन् धारयतः प्रजार्थं  
+समम् महिष्या महनीय-कीर्तेः ।  
+सप्त **व्यतीयुस्** त्रिगुणानि तस्य  
+**दिनानि** दीनोद्धरणोचितस्य ॥ २५ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/25.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -333,8 +345,11 @@ unicode_script = "devanagari"
 </div>
 
 
-अन्येद्युरात्मानुचरस्य भावञ् जिज्ञासमाना मुनिहोमधेनुः ।  
-गङ्गाप्रपातान्तविरूढशष्पङ् गौरीगुरोर्गह्वरम् आविवेश ॥ २६ ॥  
+अन्येद्युर् आत्मानुचरस्य भावञ्  
+जिज्ञासमाना मुनि-होम-धेनुः ।  
+गङ्गा-प्रपातान्त-विरूढ-शष्पङ्  
+गौरी-गुरोर् **गह्वरम् आविवेश** ॥ २६ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/26.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -343,8 +358,11 @@ unicode_script = "devanagari"
 </div>
 
 
-सा दुष्प्रधर्षा मनसापि हिंस्रैरित्यद्रिशोभाप्रहितेक्षणेन ।  
-अलक्षिताभ्युत्पतनो नृपेण प्रसह्य सिंहः किल ताञ् चकर्ष ॥ २७ ॥  
+सा दुष्-प्रधर्षा मनसापि हिंस्रैर्  
+इत्य् अद्रि-शोभा-प्रहितेक्षणेन ।  
+अलक्षिताभ्युत्पतनो नृपेण  
+प्रसह्य **सिंहः** किल **ताञ् चकर्ष** ॥ २७ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/27.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -353,8 +371,11 @@ unicode_script = "devanagari"
 </div>
 
 
-तदीयमाक्रन्दितमार्तसाधोर्गुहानिबद्धप्रतिशब्ददीर्घम् ।  
-रश्मिष्विवादाय नगेन्द्रसक्तान् निवर्तयामास नृपस्य दृष्टिम् ॥ २८ ॥  
+तदीयम् **आक्रन्दितम्** आर्त-साधोर्  
+गुहा-निबद्ध--प्रति-शब्द-दीर्घम् ।  
+रश्मिष्व् इवादाय नगेन्द्र-सक्तान्  
+**निवर्तयाम् आस** नृपस्य **दृष्टिम्** ॥ २८ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/28.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -363,8 +384,11 @@ unicode_script = "devanagari"
 </div>
 
 
-स पाटलायाङ् गवि तस्थिवांसन् धनुर्धरः केसरिणन् ददर्श ।  
-अधित्यकायाम् इव धातुमय्याल्ँ लोध्रद्रुमं सानुमतः प्रफुल्लम् ॥ २९ ॥  
+स पाटलायाङ्+++(=रक्तवर्णायां)+++ गवि तस्थिवांसन्  
+धनुर्-धरः **केसरिणन् ददर्श** ।  
+अधित्यकायाम्+++(=उन्नत-भागे)+++ इव धातुमय्याल्ँ  
++++(पिङ्गल-प्राय-)+++लोध्र-द्रुमं सानु-मतः +++(अद्रेः)+++ प्रफुल्लम् ॥ २९ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/29.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -373,8 +397,11 @@ unicode_script = "devanagari"
 </div>
 
 
-ततो मृगेन्द्रस्य मृगेन्द्रगामी वधाय वध्यस्य शरं शरण्यः ।  
-जाताभिषङ्गो नृपतिर्निषङ्गादुद्धर्तुम् ऐच्छत्प्रसभोद्धृतारिः ॥ ३० ॥  
+ततो मृगेन्द्रस्य मृगेन्द्र-गामी  
+वधाय वध्यस्य **शरं** शरण्यः ।  
+जाताभिषङ्गो+++(=जातपराभवो)+++ नृपतिर् निषङ्गाद्  
+**उद्धर्तुम् ऐच्छत्** प्रसभोद्धृतारिः ॥ ३० ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/30.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -383,8 +410,11 @@ unicode_script = "devanagari"
 </div>
 
 
-वामेतरस्तस्य करः प्रहर्तुर्नखप्रभाभूषितकङ्कपत्त्रे ।  
-सक्ताङ्गुलिः सायकपुङ्ख एव चित्रार्पितारम्भ इवावतस्थे ॥ ३१ ॥  
+वामेतरस् तस्य करः प्रहर्तुर्  
+नख-प्रभा-भूषित-कङ्क-पत्त्रे ।  
+**सक्ताङ्गुलिः** सायक-पुङ्ख एव  
+**चित्रार्पितारम्भ इवावतस्थे** ॥ ३१ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/31.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -393,8 +423,11 @@ unicode_script = "devanagari"
 </div>
 
 
-बाहुप्रतिष्टम्भविवृद्धमन्युरभ्यर्णम् आगस्कृतम् अस्पृशद्भिः ।  
-राजा स्वतेजोभिरदह्यतान्तर्भोगीव मन्त्रौषधिरुद्धवीर्यः ॥ ३२ ॥  
+बाहु-प्रतिष्टम्भ-विवृद्ध-मन्युर्  
+अभ्यर्णम् आगस्-कृतम् अस्पृशद्भिः ।  
+**राजा** स्व-तेजोभिर् **अदह्यतान्तर्**  
+भोगीव मन्त्रौषधि-रुद्ध-वीर्यः ॥ ३२ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/32.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -403,8 +436,11 @@ unicode_script = "devanagari"
 </div>
 
 
-तम् आर्यगृह्यन् निगृहीतधेनुर्मनुष्यवाचा मनुवंशकेतुम् ।  
-विस्माययन्विस्मितम् आत्मवृत्तौ सिंहोरुसत्त्वन् निजगाद सिंहः ॥ ३३ ॥  
+तम् आर्य-गृह्यन् निगृहीत-धेनुर्  
+**मनुष्य-वाचा** मनु-वंश-केतुम् ।  
+**विस्माययन्** विस्मितम् आत्मवृत्तौ   
+सिंहोरुसत्त्वन् +++(राजानं)+++ **निजगाद सिंहः** ॥ ३३ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/33.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -414,8 +450,11 @@ unicode_script = "devanagari"
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga02-34-45.mp3"></div>
 
 
-अलम् महीपाल तव श्रमेण प्रयुक्तम् अप्यस्त्रम् इतो वृथा स्याथ् ।  
-न पादपोन्मूलनशक्ति रंहः शिलोच्चये मूर्छति मारुतस्य ॥ ३४ ॥  
+**अलम्** महीपाल तव **श्रमेण**  
+प्रयुक्तम् अप्य् **अस्त्रम्** इतो **वृथा स्यात्** ।  
+न पादपोन्मूलन-शक्ति **रंहः**  
+**शिलोच्चये मूर्छति** मारुतस्य ॥ ३४ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/34.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -424,8 +463,11 @@ unicode_script = "devanagari"
 </div>
 
 
-कैलासगौरव्ँ वृषम् आरुरुक्षोः पादार्पणानुग्रहपूतपृष्टम् ।  
-अवेहि माङ् किङ्करम् अष्टमूर्तेः कुम्भोदरन् नाम निकुम्भमित्रम् ॥ ३५ ॥  
+कैलास-गौरव्ँ वृषम् आरुरुक्षोः  
+पादार्पणानुग्रह-पूत-पृष्टम् ।  
+**अवेहि माङ्** किङ्करम् अष्ट-मूर्तेः  
+कुम्भोदरन् नाम निकुम्भ-मित्रम् ॥ ३५ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/35.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -434,8 +476,11 @@ unicode_script = "devanagari"
 </div>
 
 
-अमुम् पुरः पश्यसि देवदारुम् पुत्रीकृतोऽसौ वृषभध्वजेन ।  
-यो हेमकुम्भस्तननिःसृतानां स्कन्दस्य मातुः पयसार्ँ रसज्ञः ॥ ३६ ॥  
+अमुम् पुरः **पश्यसि देव-दारुम्**  
+पुत्री-कृतो ऽसौ वृषभ-ध्वजेन ।  
+यो हेम-कुम्भ-स्तन-निःसृतानां  
+स्कन्दस्य मातुः पयसार्ँ रसज्ञः ॥ ३६ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/36.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -444,8 +489,11 @@ unicode_script = "devanagari"
 </div>
 
 
-कण्डूयमानेन कटङ् कदाचिद्वन्यद्विपेनोन्मथिता त्वगस्य ।  
-अथैनम् अद्रेस्तनया शुशोच सेनान्यम् आलीढम् इवासुरास्त्रैः ॥ ३७ ॥  
+कण्डूयमानेन कटङ् कदाचिद्  
+वन्य-द्विपेनोन्मथिता त्वग् अस्य ।  
+**अथैनम्** अद्रेस् तनया **शुशोच**  
+सेनान्यम् आलीढम् इवासुरास्त्रैः ॥ ३७ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/37.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
