--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/01.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/01.md
@@ -178,7 +178,7 @@ unicode_script: devanagari
 रेमे मुहुर्मध्यगता सखीनां  
 क्रीडारसं निर्विशतीव बाल्ये॥२९॥
 
-![](../../../../images/bioluminescent-fungii.jpg)
+![](../images/bioluminescent-fungii.jpg)
 तां हंसमालाः शरदीव गङ्गां  
 महौषधिं नक्तमिवात्मभासः।  
 स्थिरोपदेशामुपदेशकाले  
