--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sarva-prastutiH/1.md
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sarva-prastutiH/1.md
@@ -14,8 +14,8 @@ Slokas 25 to 42: The greatness of Bukka, the father of Kampaņa, is described.
 
 
 ## देववन्दनम्
-कल्याणाय सतां भूयात्  
-देवो दन्तावलाननः+++(=दन्ति+आननः)+++ ।  
+**कल्याणाय** सतां **भूयात्**  
+देवो **दन्तावलाननः**+++(=दन्ति+आननः)+++ ।  
 शरणागत-सङ्कल्प-  
 कल्पना-कल्पपादपः ॥ १ ॥
 
@@ -29,8 +29,8 @@ Slokas 25 to 42: The greatness of Bukka, the father of Kampaņa, is described.
 
 स्रष्टुः स्त्री-पुंस-निर्माण-  
 मातृका-रूप-धारिणौ।  
-प्रपद्ये प्रति-बोधाय  
-चित्-प्रकाशात्मकौ शिवौ ॥ २ ॥ +++(5)+++ 
+**प्रपद्ये** प्रति-बोधाय  
+चित्-प्रकाशात्मकौ **शिवौ** ॥ २ ॥ +++(5)+++ 
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
@@ -43,7 +43,14 @@ Slokas 25 to 42: The greatness of Bukka, the father of Kampaņa, is described.
 महाकवि-मुखाऽम्भोज  
 मणि-पञ्जर-शारिकाम् ।  
 चैतन्य-जल-विज्योत्स्नां  
-देवीं वन्दे सरस्वतीम् ॥ ३ ॥+++(5)+++   
+देवीं **वन्दे सरस्वतीम्** ॥ ३ ॥+++(5)+++   
+
+<details><summary>मूलम्</summary>
+
+महाकविमुखाम्भोजमणिपञ्जरशारिकाम् ।  
+चैतन्यजलधिज्योत्स्नां देवीं वन्दे सरस्वतीम् ॥ १ ॥ 
+</details>
+
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
@@ -52,11 +59,24 @@ Slokas 25 to 42: The greatness of Bukka, the father of Kampaņa, is described.
 
 </details>
 
+<details><summary>English</summary>
+
+To the goddess of speech,  
+Sarasvatī,  
+do I bow –  
+a *śārikā* in the bejewelled birdcages  
+of the best bards’ lotus mouths,  
+the moonlight  
+rousing the ocean of human consciousness. 1 
+</details>
+
+
+
 
 ## गुरु-वन्दनम्
 असाधारण-सार्वज्ञ्यं  
 विलसत्-सर्व-मङ्गलम्।  
-क्रिया-शक्ति--गुरुं वन्दे  
+**क्रिया-शक्ति--गुरुं वन्दे**  
 त्रिलोचनम् इवाऽपरम् ॥ ४ ॥   
 
 
@@ -68,8 +88,8 @@ Slokas 25 to 42: The greatness of Bukka, the father of Kampaņa, is described.
 
 
 ## कवि-वन्दनम्
-चेतसो ऽस्तु प्रसादाय  
-सतां प्राचेतसो मुनिः।  
+चेतसो **ऽस्तु प्रसादाय**  
+सतां **प्राचेतसो** मुनिः।  
 पृथिव्यां पद्य-निर्माण-  
 विद्यायाः प्रथमं पदम् ॥ ५ ॥+++(4)+++   
 
@@ -81,10 +101,10 @@ Slokas 25 to 42: The greatness of Bukka, the father of Kampaņa, is described.
 </details>
 
 
-वैयासिके गिरां गुम्फे  
-पुण्ड्रेक्षाव्+++(=रक्तेक्षाव्)+++ इव लभ्यते।  
+**वैयासिके** गिरां गुम्फे  
+पुण्ड्रेक्षाव्+++(=रक्तेक्षाव्)+++ इव **लभ्यते**।  
 सद्यः सहृदयाऽऽह्लादी  
-सारः पर्वणि पर्वणि ॥ ६ ॥ +++(4)+++  
+**सारः** पर्वणि पर्वणि ॥ ६ ॥ +++(4)+++  
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
@@ -94,8 +114,8 @@ Slokas 25 to 42: The greatness of Bukka, the father of Kampaņa, is described.
 </details>
 
 
-दासतां कालि-दासस्य  
-कवयः के न बिभ्रति।  
+**दासतां कालि-दासस्य**  
+कवयः **के न बिभ्रति**।  
 इदानीम् अपि तस्यार्थान्  
 उपजीवन्त्य् अमी यतः ॥ ७ ॥ +++(4)+++  
 
