--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sarva-prastutiH/1.md
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sarva-prastutiH/1.md
@@ -48,7 +48,7 @@ Slokas 25 to 42: The greatness of Bukka, the father of Kampaņa, is described.
 <details><summary>मूलम्</summary>
 
 महाकविमुखाम्भोजमणिपञ्जरशारिकाम् ।  
-चैतन्यजलधिज्योत्स्नां देवीं वन्दे सरस्वतीम् ॥ १ ॥ 
+चैतन्यजलधिज्योत्स्नां देवीं वन्दे सरस्वतीम् ॥
 </details>
 
 
@@ -59,7 +59,7 @@ Slokas 25 to 42: The greatness of Bukka, the father of Kampaņa, is described.
 
 </details>
 
-<details><summary>English</summary>
+<details><summary>Shankar & Venetia</summary>
 
 To the goddess of speech,  
 Sarasvatī,  
