--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sv_sanxepaH/1.md
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sv_sanxepaH/1.md
@@ -1,7 +1,7 @@
++++
+title = "१"
 
-
-
-
++++
 <details><summary>मूलम्</summary>
 
 महाकविमुखाम्भोजमणिपञ्जरशारिकाम् ।  
@@ -211,9 +211,6 @@ for daring to halt his military assaults.
 11
 </details>
 
-
-
-
 <details><summary>मूलम्</summary>
 
 तस्यासीद्विजया नाम विजयार्जितसम्पदः ।  
@@ -318,9 +315,6 @@ seemed to be permanently stained
 by the setting sun.
 17
 </details>
-
-
-
 
 <details><summary>मूलम्</summary>
 
